# govuk-onelogin-django

./: .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  SECURITY_CHECKLIST.md  personal-data-exclusions.txt  pyproject.toml  requirements.txt  security-exclusions.txt  tox.ini
.github/workflows/: ci.yml  publish.yml
documentation/: configuration.md
example_project/: .env-example  README.md  hello.py  pyproject.toml
example_project/example/: env.py  settings.py  urls.py  views.py
example_project/example/templates/: example.html  logged-in-view.html
govuk_onelogin_django/: apps.py  backends.py  logging.py  urls.py  utils.py  views.py
govuk_onelogin_django/tests/: test_backends.py  test_logging.py  test_settings.py  test_utils.py  test_views.py  urls.py
